--- a/src/README
+++ b/src/README
@@ -1,10 +1,13 @@
 
 185. 내 맘속을
 190. 두려워 말라
+206. 우리 곁에 머무소서
 216. 주님의 자비를
+224. 주여 비오니 
+226. 주여 주 예수여
 228. 주여 평화를 주소서
 231. 찬미하여라
 
 *곡찾기
-224. 주여 비오니 
-226. 주여 주 예수여
+
+
