--- a/src/README
+++ b/src/README
@@ -1,6 +1,7 @@
-
+182. 거룩하신 하느님
 185. 내 맘속을
 190. 두려워 말라
+192. 생명의 샘물
 197. 어두운 맘 속에
 206. 우리 곁에 머무소서
 216. 주님의 자비를
@@ -10,5 +11,8 @@
 231. 찬미하여라
 
 *곡찾기
-
-
+195. 아버지 당신 손에
+202. 오소서 성령이여
+213. 주님은 빛이시니
+217. 주님의 평화
+230. 주 찬미하여라
